# solai

./: .gitignore  Anchor.toml  DOCS.md  Idea.md  PRODUCT_OVERVIEW.md  Project Structure.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  REPOSITORY_CHECKLIST.md  SECURITY.md  config.example.yml  package-lock.json  package.json  start-dev.sh  test-api-integration.sh
api-gateway/: package-lock.json  package.json  test-anchor.js  test-defillama.ts  test-wallet.ts  tsconfig.json
api-gateway/src/: index.ts
app/: .eslintignore  .eslintrc.js  README.md  next.config.js  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json
app/scripts/: generate-theme.ts
app/src/lib/: runtime.ts  (+1 more)
client-sdk/: package-lock.json  package.json  tsconfig.json
client-sdk/src/: api.ts  blockchain.ts  shims.d.ts
config/: README.md
llm-processor/: Dockerfile  requirements.txt  test_workflow.py
llm-processor/prompts/: chat_response.md  final_output.md  intent_detection.md  rag_synthesis.md  web_crawl_synthesis.md
llm-processor/scripts/: README.md  check_index.py  seed_pinecone.py  test_ollama.py  test_pinecone.py  test_rag.py
llm-processor/src/: main.py  settings.py
programs/: Cargo.toml  build.rs
programs/src/: lib.rs
programs/tests/: integration.rs
scripts/: check_embedding_dimension.py  create_pinecone_index.py  deploy_program.sh  install_frontend_deps.sh  showcase_all_endpoints.sh  test_all_endpoints.sh  test_chat_with_dev_wallet.sh  test_dashboard.sh  test_dev_wallet.ts  test_enhanced_chat.sh  test_firecrawl.py  test_firecrawl_simple.py  update_rag_index.sh
(+85 files in other folders)
